--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
+aiosmtplib==3.0.2
 alembic==1.16.1
 annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
+blinker==1.9.0
 click==8.2.1
+dnspython==2.7.0
 ecdsa==0.19.1
+email_validator==2.2.0
 fastapi==0.115.12
+fastapi-mail==1.5.0
 h11==0.16.0
 idna==3.10
+Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
 passlib==1.7.4
@@ -14,7 +20,9 @@ psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pydantic==2.11.5
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
+python-dotenv==1.1.0
 python-jose==3.5.0
 python-multipart==0.0.20
 rsa==4.9.1
