--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
 blinker==1.9.0
+certifi==2025.4.26
 click==8.2.1
 dnspython==2.7.0
 ecdsa==0.19.1
@@ -12,6 +13,7 @@ fastapi==0.115.12
 fastapi-mail==1.5.0
 h11==0.16.0
 idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
